# pervau

./: .env  .gitignore  Cargo.toml  README.md
migrations/2021-03-25-131241_bloodpressures/: down.sql  up.sql
src/: controller.rs  lib.rs  model.rs  schema.rs
src/controller/: database.rs  io.rs  management.rs
src/controller/database/: bloodpressure.rs
src/controller/management/: bloodpressure.rs
src/model/: serializable.rs
src/model/database/: bloodpressure.rs
src/model/serializable/: bloodpressure.rs  context.rs
src/view/api/: bloodpressure.rs
src/view/html/: bloodpressure.rs
static/scripts/: base.js
static/styles/: base.css
templates/: base.html.tera  list.html.tera
templates/bloodpressure/: list.html.tera
